base/src/test/resources/failure/terck/non-term.aya.txt
In file $FILE:3:4 ->

  1 | open import Arith::Nat::Core
  2 | 
  3 | def f Nat : Nat
          ^^

Error: The recursive definition `f` is not structurally recursive
note: In particular, the problematic call is:
        f n
      whose call matrix is:
        ?

In file $FILE:6:4 ->

  4 |   | n => g (suc n)
  5 | 
  6 | def g Nat : Nat
          ^^

Error: The recursive definition `g` is not structurally recursive
note: In particular, the problematic call is:
        g (suc n)
      whose call matrix is:
        ?

2 error(s), 0 warning(s).
What are you doing?
